--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ## Database Configuration
 ## DB name : julyppmdb
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/grocery
+spring.datasource.url=jdbc:postgresql://localhost:5432/GroceryStore
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=525592
 
 ## JPA Configuration
 spring.jpa.show-sql=true
