--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ## Database Configuration
 ## DB name : julyppmdb
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/GroceryStore
+spring.datasource.url=jdbc:postgresql://192.168.29.110:5433/grocery
 spring.datasource.username=postgres
-spring.datasource.password=525592
+spring.datasource.password=12345
 
 ## JPA Configuration
 spring.jpa.show-sql=true
